--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,14 @@
-flake8==3.7.9
+click==7.1.1
 Flask==1.1.2
 Flask-Cors==3.0.8
 Flask-Login==0.5.0
 Flask-Migrate==2.5.3
 Flask-SQLAlchemy==2.4.1
 Flask-Testing==0.8.0
-Flask-WTF==0.14.3
+Flask-WTF==0.14.
+itsdangerous==1.1.0
+Jinja2==2.11.1
+MarkupSafe==1.1.1
+python-dotenv==0.12.0
+Werkzeug==1.0.1
 WTForms==2.3.1
